@@ -1,3 +1,11 @@
+2006-02-28  Stipe Tolj  <stolj at kannel.org>
+  * gwlib/conn.c: fixed deadlock when first thread made conn_unregister call
+    and the FDSet thread at the same time called conn_callback
+    function. Then the first thread locked [in|out] lock and wait for unregister
+    completion but the fdset thread tried to lock [in|out].
+    Also fixed some gcc4 warnings.
+    This commit should fix #302 and some others http client related.
+
 2006-02-23  Stipe Tolj  <stolj at kannel.org>
   * gw/wap-appl.c: apply higher log-level usage for octstr_dump() in 
     decode_bearer_indication() and check_application_headers(). NLC.
